--- a/homework_spring_web/src/main/webapp/WEB-INF/views/orders/byId.html
+++ b/homework_spring_web/src/main/webapp/WEB-INF/views/orders/byId.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" lang="">
+<html xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <title>Order Details</title>
 </head>
