--- a/homework_spring_web/src/main/webapp/WEB-INF/views/orders/new.html
+++ b/homework_spring_web/src/main/webapp/WEB-INF/views/orders/new.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
-  <title>New Order</title>
+    <title>New Order</title>
 </head>
 <body>
 <h1>New Order</h1>
-<!-- Add form to capture order details and submit to the corresponding endpoint -->
 <form method="POST" action="/orders">
-  <label for="date">Date:</label>
-  <input type="text" id="date" name="date" required>
-  <br>
-  <label for="cost">Cost:</label>
-  <input type="number" id="cost" name="cost" required>
-  <br>
-  <label for="products">Products:</label>
-  <input type="text" id="products" name="products" required>
-  <br>
-  <button type="submit">Create Order</button>
+    <label for="date">Date:</label>
+    <input type="text" id="date" name="date" required>
+    <br>
+    <label for="cost">Cost:</label>
+    <input type="number" id="cost" name="cost" required>
+    <br>
+    <label for="products">Products:</label>
+    <input type="text" id="products" name="products" required>
+    <br>
+    <button type="submit">Create Order</button>
 </form>
 </body>
 </html>
